Cascading Change Log

3.1.0 [unreleased]

  Fixed issue on Apache Tez that did not create a proper vertex edge on a split in the pipe assembly under some
  circumstances.

  Updated c.m.a.PropertyAnnotation to have default #visibility() of PUBLIC, and added an #optional() property that
  defaults to true.

  Fix for NPE when attempting to set null values on underlying config instance.

  Created cascading-hadoop2-tez-stats sub-project to isolate Tez/YARN timeline server dependencies.

  Fixed issue on Apache Tez where multiple prior splits and subsequent splicing back into a c.p.HashJoin could create an
  invalid plan.

  Updated Apache Hadoop 2 based sub-projects to 2.7.1.

  Added new c.f.FlowStep#getFlowStepDescriptor and c.f.FlowStepDescriptors to store additional metadata on c.f.FlowStep
  instances.

  Updated c.f.t.p.r.t.BoundaryBalanceGroupSplitHashJoinTransformer to insert After and not AfterEachEdge.

  Fixed c.f.p.i.t.InsertionGraphTransformer to properly place insertions.

  Created cascading-expression sub-project to isolate all 'expression' operations based on Janino and it isolate
  the Janino dependency. A dependency to cascading-expression must be added to projects that depend on the isolated
  classes.

  Created cascading-hadoop2-io sub-project to isolate Hadoop 2.x HDFS and serialization dependencies and updated
  cascading-hadoop2-mr1 and cascading-hadoop2-tez to depend on cascading-hadoop2-io.

  Updated c.t.Fields to provide a constructor accepting type information, and a method #applyFields() to update
  field names.

  Added support for configuring split combining across supported platforms through the c.f.FlowRuntimeProps
  "cascading.flow.runtime.splits.combine" property. If enabled, will induce c.t.h.Hfs to enable combined files
  support on the MapReduce platforms.

  Updated Hadoop, Hadoop2, and Tez serialization and comparator frameworks to fully leverage declared field type