@@ -35,6 +35,7 @@ import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupBlockingHas
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupGroupTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupMergeGroupTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupNonBlockingHashJoinTransformer;
+import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupSplitJoinTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupSplitMergeGroupTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceGroupSplitTransformer;
 import cascading.flow.hadoop.planner.rule.transformer.TapBalanceHashJoinBlockingHashJoinTransformer;
@@ -70,6 +71,7 @@ public class MapReduceHadoopRuleRegistry extends RuleRegistry
 
     // Balance with temporary Taps
     addRule( new TapBalanceGroupSplitTransformer() );
+    addRule( new TapBalanceGroupSplitJoinTransformer() );
     addRule( new TapBalanceGroupSplitMergeGroupTransformer() );
     addRule( new TapBalanceGroupMergeGroupTransformer() );
     addRule( new TapBalanceGroupGroupTransformer() );
