@@ -2,6 +2,9 @@ Cascading Change Log
 
 3.1.0 [unreleased]
 
+  Fixed issue with the Hadoop MapReduce planner that created a malformed plan for a single source split and join pipe
+  assembly.
+
   Fixed issue on Apache Tez that did not create a proper vertex edge on a split in the pipe assembly under some
   circumstances.
 
